--- a/extension/popup/styles/_base.scss
+++ b/extension/popup/styles/_base.scss
@@ -21,7 +21,9 @@ html, body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
     overflow-y: auto;
     overflow-x: hidden;
+}
 
+body {
     &.expanded {
         min-height: 600px;
     }
@@ -46,6 +48,10 @@ textarea {
     font: inherit;
     color: inherit;
     background: none;
+}
+
+svg {
+	flex-shrink: 0;
 }
 
 // =====================================================
