--- a/extension/popup/styles/_components.scss
+++ b/extension/popup/styles/_components.scss
@@ -45,8 +45,8 @@
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    min-width: 16px;
-    height: 16px;
+    min-width: 15px;
+    height: 15px;
     padding: 0 4px;
     font-size: var(--font-body);
     font-weight: 600;
@@ -86,7 +86,7 @@
 		box-sizing: border-box;
 		position: absolute;
 		top: calc(100% + 4px);
-		left: 0;
+		right: 0;
 		min-width: 100%;
 		max-width: fit-content;
 		z-index: 4;
@@ -554,7 +554,6 @@
     svg {
         width: 10px;
         height: 10px;
-        flex-shrink: 0;
     }
 }
 
@@ -573,7 +572,6 @@
     svg {
         width: 12px;
         height: 12px;
-        flex-shrink: 0;
     }
     
     &.primary {
